--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>ink.markidea</groupId>
     <artifactId>note</artifactId>
-    <version>0.1-SNAPSHOT</version>
+    <version>0.2</version>
     <name>note</name>
     <description>MarkIdea, a note-taking software</description>
 
